fixed Swagger docs
